<resources>

    <!-- Titles -->
    <string name="appName_title">Connect Four</string>

    <string name="settings_title">Settings</string>
    <string name="volumeSettings_title">Volume Settings</string>
    <string name="graphicsSettings_title">Graphics Settings</string>

    <string name="paused_title">Paused</string>


    <!-- Buttons -->
    <string name="start_button">START GAME</string>
    <string name="settings_button">SETTINGS</string>
    <string name="back_button">Back</string>

    <string name="graphicsSettings_button">Graphics Settings</string>
    <string name="volumeSettings_button">Volume Settings</string>

    <string name="vsPlayer_button">Pass n Play</string>
    <string name="vsAI_button">vs AI</string>

    <string name="pause_button">Pause</string>
    <string name="resume_button">Resume</string>

    <!-- Text -->
    <string name="musicVol_text">Music Volume</string>
    <string name="soundFXVol_text">Sound Effects Volume</string>

    <string name="gameType_text">Game Type:</string>
    <string name="newGame_text">New Game</string>
    <string name="boardSize_text">Select Board Size</string>





    <string-array name="array_name">
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="board_size">
        <item>6x5</item>
        <item>7x6</item>
        <item>8x7</item>
    </string-array>
    <string name="title_activity_volume_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Game Board -->
    <string name="playerTurn">"Player 1 Turn! "</string>
    <string name="instructionBoard">"Tap an empty slot to place your counter! "</string>
    <string name="vsBot">VS BOT</string>
    <string name="rowsSpinner">Rows:</string>
    <string name="columnsSpinner">Columns:</string>
    <string name="aiDesc">VS AI Button</string>
    <string name="vsPlayerButton">VS Player Button</string>
    <string name="boardSizes">Board Size</string>
    <string name="Back">Back</string>
</resources>
