<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivities.SettingsActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:firstBaselineToTopHeight="80dp"
        android:fontFamily="@font/bangers"
        android:text="@string/settings_title"
        android:textSize="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065"
        android:background="#00FFFFFF" />


    <Button
        android:id="@+id/graphicsSettingsButton"
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:layout_marginStart="118dp"
        android:layout_marginLeft="118dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/btn_rounded"
        android:padding="15dp"
        android:text="@string/graphicsSettings_button"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/volumeSettings"
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:layout_marginStart="118dp"
        android:layout_marginLeft="118dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/btn_rounded"
        android:padding="15dp"
        android:text="@string/volumeSettings_button"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphicsSettingsButton" />

    <Button
        android:id="@+id/button4"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volumeSettings"
        tools:text="@string/back_button" />


</androidx.constraintlayout.widget.ConstraintLayout>