<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/volumeSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivities.VolumeSettingsActivity">


        <TextView
            android:id="@+id/volumeSettingsTitle"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="52dp"
            android:background="#00FFFFFF"
            android:firstBaselineToTopHeight="80dp"
            android:fontFamily="@font/bangers"
            android:gravity="center"
            android:text="@string/volumeSettings_title"
            android:textSize="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="80dp" />

        <SeekBar
            android:id="@+id/soundFXSlider"
            style="@style/Orange"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="66dp"
            android:layout_marginTop="22dp"
            android:max="100"
            android:progress="50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/soundFxText"
            android:layout_marginStart="66dp" />

    <SeekBar
        android:id="@+id/musicSlider"
        style="@style/Orange"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="30dp"
        android:max="100"
        android:progress="50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicText" />

    <TextView
        android:id="@+id/musicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="267dp"
        android:background="#00FFFFFF"
        android:text="@string/musicVol_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/soundFxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="117dp"
        android:layout_marginLeft="117dp"
        android:layout_marginTop="61dp"
        android:background="#00FFFFFF"
        android:text="@string/soundFXVol_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicSlider" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundFXSlider" />

</androidx.constraintlayout.widget.ConstraintLayout>